--- a/lab1/app/Makefile
+++ b/lab1/app/Makefile
@@ -1,3 +1,5 @@
+# Target: app.bin
+# Description: This target compiles the assembly file app.s into a binary file app.bin.
 app.bin: app.s
 	gcc -c -m32 app.s -o app.o
 	ld -m elf_i386 -e start -Ttext 0x8c00 app.o -o app.elf
